[feat!] add updateUser, deleteUser, fix router bug
